<resources>
    <string name="app_name">Practica2</string>
    <string name="hintName">Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintEmail">Email Address</string>
    <string name="hintDate">Birth Date dd/mm/yy</string>
    <string name="textViewCity">City</string>
    <string name="textGender">Gender</string>
    <string name="radioTextMale">Male</string>
    <string name="radioTextFemale">Female</string>
    <string name="textViewInterests">Interests in</string>
    <string name="textViewSign">Sign</string>
    <string name="textViewAvatar">Avatar</string>
    <string name="textSignUpButton">Sign up</string>
    <string name="registerTextView">REGISTER</string>


    <string-array name="cityList">
        <item>Burgos</item>
        <item>Madrid</item>
        <item>Barcelona</item>
        <item>Cuenca</item>
        <item>Málaga</item>
    </string-array>


    <string name="optionReading">Reading</string>
    <string name="optionPainting">Painting</string>
    <string name="optionGardening">Gardening</string>
    <string name="optionHiking">Hiking</string>
    <string name="optionCooking">Cooking</string>
    <string name="optionVideoGames">Games</string>


</resources>